# Mixture-of-Transformers-Case

./: .gitignore  README.md  pyproject.toml  test_setup.py
playground/: mot_architecture.md
src/: __init__.py  config.py  data.py  encoders.py  evaluation.py  experiment.py  models.py  training.py  utils.py
